Implement filter functionality in the admin dashboard: Added a FilterBar component for managing talent and hiring request filters, including status, role, and English level options. Updated DashboardClient and page.tsx to handle filter changes and clear actions, enhancing user experience. Added new filter types and validation constants in filters.ts, along with corresponding translations in Arabic and English.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1025,6 +1025,20 @@
 			"talents": "المواهب",
 			"companies": "الشركات"
 		},
+		"filters": {
+			"label": "الفلاتر",
+			"clear": "مسح الفلاتر",
+			"all": "الكل",
+			"talentStatus": "حالة الطلب",
+			"role": "الدور",
+			"englishLevel": "مستوى الإنجليزية",
+			"applicationStatus": "حالة الطلب",
+			"requestStatus": "حالة الطلب",
+			"roles": {
+				"developer": "مطور",
+				"designer": "مصمم"
+			}
+		},
 		"status": {
 			"talent": {
 				"underReview": "قيد المراجعة",
