Enhance application form submission process: Implemented auto-login functionality upon successful account creation, providing a smoother user experience. Added new translation strings in Arabic and English for success messages and redirection prompts. Cleaned up code in various components for improved readability.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -461,7 +461,9 @@
 		"success": {
 			"title": "تم استلام طلبك",
 			"description": "سنراجعه ونعاود التواصل معك قريباً.",
-			"descriptionPleaseLogin": "تم إنشاء حسابك. يُرجى تسجيل الدخول للمتابعة."
+			"descriptionPleaseLogin": "تم إنشاء حسابك. يُرجى تسجيل الدخول للمتابعة.",
+			"manualLogin": "تم إنشاء حسابك! جاري تحويلك إلى صفحة تسجيل الدخول...",
+			"redirecting": "جاري تسجيل الدخول وتحويلك إلى لوحة التحكم..."
 		},
 		"errors": {
 			"rateLimit": "طلبات كثيرة. جرّب بعد دقيقة.",
