Enhance email functionality in the admin dashboard: Implemented a new email dialog in the DashboardClient for sending custom emails to talents. Added API endpoint for handling email sending with validation and error handling. Updated translations for email-related UI elements in both Arabic and English. Introduced new RichTextEditor component for composing email messages, improving user experience with rich text formatting options.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1139,6 +1139,22 @@
 			"matchedProject": {
 				"title": "فرصتك المطابقة",
 				"description": "تمت مطابقتك مع فرصة هذا المشروع"
+			},
+			"email": {
+				"button": "إرسال بريد",
+				"dialogTitle": "إرسال بريد إلكتروني مخصص",
+				"dialogDescription": "اكتب رسالة بريد إلكتروني مخصصة لإرسالها إلى هذا المرشح",
+				"recipient": "إلى",
+				"subject": "الموضوع",
+				"subjectPlaceholder": "أدخل موضوع البريد الإلكتروني...",
+				"body": "الرسالة",
+				"bodyPlaceholder": "اكتب رسالتك هنا...\n\nيمكنك كتابة عدة فقرات. سيتم الحفاظ على التنسيق في البريد الإلكتروني.",
+				"sendButton": "إرسال البريد",
+				"sending": "جارٍ الإرسال...",
+				"sendSuccess": "تم إرسال البريد الإلكتروني بنجاح",
+				"sendError": "فشل إرسال البريد الإلكتروني",
+				"subjectRequired": "يرجى إدخال موضوع البريد الإلكتروني",
+				"bodyRequired": "يرجى إدخال رسالة"
 			}
 		},
 		"companies": {
