Update talent status to include 'screening' in translations and email templates: Added 'screening' status to both Arabic and English translation files, updated the DashboardClient to reflect this new status, and modified email content for talent status updates accordingly. This enhances the clarity of the application process for users.

--- a/public/locales/ar/translation.json
+++ b/public/locales/ar/translation.json
@@ -1070,6 +1070,7 @@
 		"status": {
 			"talent": {
 				"underReview": "قيد المراجعة",
+				"screening": "قيد الفحص",
 				"interviewing": "قيد المقابلة",
 				"training": "قيد التدريب",
 				"pendingMatching": "بانتظار المطابقة",
