--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1107,6 +1107,7 @@
 		"status": {
 			"talent": {
 				"underReview": "Under Review",
+				"screening": "Screening",
 				"interviewing": "Interviewing",
 				"training": "Training",
 				"pendingMatching": "Pending Matching",
